2020.1.1 update - moved "2020 年 Scrum 指南版本更新說明" to H1 to increase visibility in TOC - fixed heading bug - HTML TOC: reduced inner list padding

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,6 +61,10 @@ ul.inline_toc {
       border-bottom-right-radius: 5px;
     }
   }
+
+  ul {
+    padding-inline-start: 1rem;
+  }
 }
 
 .main-content {
